# qasql-platform

./: .gitignore  PRD.md  README.md  STRUCTURE.md  TASK.md  pyproject.toml
examples/: basic_usage.py  generate_mysql_data.py  generate_mysql_data.sql  interactive_demo.py  quickstart.py  test_california_schools.py  test_remote_database.py  test_schema_only.py  test_supabase.py
examples/qasql_remote_output/descriptions/: herb5_descriptions.json
examples/qasql_remote_output/schemas/: herb5_schema.json
platform/: next.config.ts  package-lock.json  package.json  proxy.ts  vercel.json
platform/api/: requirements.txt
platform/api/engine/: query.py  setup.py
platform/app/: layout.tsx  providers.tsx
platform/app/(auth)/: layout.tsx
platform/app/(platform)/: layout.tsx
platform/components/ui/: badge.tsx  button.tsx  card.tsx  copy-button.tsx  input.tsx  language-toggle.tsx  mask-text.tsx  modal.tsx  select.tsx  spinner.tsx  status-badge.tsx  theme-toggle.tsx  toast.tsx
platform/engine/: _utils.py  requirements.txt
platform/engine/handlers/: query.py  setup.py
platform/lib/api/: auth-guard.ts  rate-limit.ts  response.ts  validate.ts  verify-api-key.ts
platform/lib/api-key/: generate.ts  verify.ts
platform/lib/crypto/: encrypt.ts
platform/lib/i18n/: context.tsx  index.ts  server.ts
platform/lib/supabase/: auth.ts  client.ts  middleware.ts  server.ts
platform/lib/validations/: db-config.ts  llm-config.ts  project.ts  query.ts
platform/scripts/: chk-01-verify.mjs  chk-02-verify.mjs  chk-03-verify.mjs  chk-04-verify.mjs  chk-05-verify.mjs  diagnose-trigger.mjs  diagnose-trigger2.mjs  diagnose-trigger3.mjs  e2e-curl.sh  security-checklist.md
platform/supabase/migrations/: 001_create_tables.sql  002_rls_policies.sql  003_storage_policies.sql  004_fix_trigger_search_path.sql
platform/types/: index.ts  supabase.ts
qasql/: __init__.py  __main__.py  cli.py  config.py  database.py  engine.py  llm.py  result.py  tui.py
qasql/core/: __init__.py  cache.py  executor.py  few_shot.py  generator.py  judge.py  prompts.py  schema_agent.py  schema_graph.py
research/: future_study.md
(+43 files in other folders)
